[gd_scene load_steps=15 format=3 uid="uid://q3xr5qm3fabj"]

[ext_resource type="Script" path="res://scripts/creature.gd" id="1_5ocg2"]
[ext_resource type="Texture2D" uid="uid://bheoohg7nm3ji" path="res://assets/shapes_characters/red_body_square.png" id="2_hmuaf"]
[ext_resource type="Texture2D" uid="uid://bbkxuf4lofh34" path="res://assets/shapes_characters/face_g.png" id="3_g4vca"]
[ext_resource type="Script" path="res://scripts/states/state_machine.gd" id="3_pj0g1"]
[ext_resource type="Script" path="res://scripts/states/enemy_idle.gd" id="4_r5ymf"]
[ext_resource type="Texture2D" uid="uid://07wfppcdm4nl" path="res://assets/shapes_characters/red_hand_closed.png" id="4_xnidn"]
[ext_resource type="Script" path="res://scripts/states/enemy_follow.gd" id="5_vyri5"]
[ext_resource type="Script" path="res://scripts/states/enemy_charge.gd" id="6_2yer0"]
[ext_resource type="AudioStream" uid="uid://p87jatn74yu" path="res://assets/sfx/jacobalcook__creature-roar-1.wav" id="6_htdax"]
[ext_resource type="Script" path="res://scripts/states/enemy_shoot.gd" id="7_scd62"]
[ext_resource type="AudioStream" uid="uid://dq11rmf663l2u" path="res://assets/sfx/shoot.wav" id="11_mtn51"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l1gsa"]
size = Vector2(74, 72)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bjfun"]
size = Vector2(74, 72)

[sub_resource type="CircleShape2D" id="CircleShape2D_yatbk"]
radius = 79.0253

[node name="Creature" type="CharacterBody2D"]
script = ExtResource("1_5ocg2")

[node name="SquareBody" type="Sprite2D" parent="."]
texture = ExtResource("2_hmuaf")

[node name="SquareFaceFollow" type="Sprite2D" parent="SquareBody"]
texture = ExtResource("3_g4vca")

[node name="RightHand" type="Sprite2D" parent="SquareBody"]
position = Vector2(60, 26)
rotation = -1.5708
texture = ExtResource("4_xnidn")
flip_h = true

[node name="LeftHand" type="Sprite2D" parent="SquareBody"]
position = Vector2(-60, 26)
rotation = 1.5708
texture = ExtResource("4_xnidn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_l1gsa")

[node name="KillArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillArea"]
shape = SubResource("RectangleShape2D_bjfun")

[node name="TargetArea" type="Area2D" parent="."]
visible = false
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TargetArea"]
shape = SubResource("CircleShape2D_yatbk")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_pj0g1")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("creature")]
script = ExtResource("4_r5ymf")
creature = NodePath("../..")

[node name="Follow" type="Node" parent="StateMachine" node_paths=PackedStringArray("creature")]
script = ExtResource("5_vyri5")
creature = NodePath("../..")

[node name="Charge" type="Node" parent="StateMachine" node_paths=PackedStringArray("creature")]
script = ExtResource("6_2yer0")
creature = NodePath("../..")

[node name="Shoot" type="Node" parent="StateMachine" node_paths=PackedStringArray("creature")]
script = ExtResource("7_scd62")
creature = NodePath("../..")

[node name="RoarSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_htdax")
bus = &"SFX"

[node name="ShootSFX" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("11_mtn51")
bus = &"SFX"

[node name="UseSkillTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0
autostart = true

[node name="ShootingPoint" type="Marker2D" parent="."]
unique_name_in_owner = true

[connection signal="body_entered" from="KillArea" to="." method="_on_kill_area_body_entered"]
[connection signal="finished" from="RoarSFX" to="." method="_on_roar_sfx_finished"]
[connection signal="timeout" from="UseSkillTimer" to="StateMachine/Follow" method="_on_use_skill_timer_timeout"]
